load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["aes.go"],
    importpath = "github.com/prysmaticlabs/prysm/v4/crypto/aes",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["aes_test.go"],
    embed = [":go_default_library"],
)
