load("@prysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "fieldspec.go",
        "main.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v5/tools/change-beaconstate-ssz",
    visibility = ["//visibility:private"],
    deps = [
        "//config/params:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//io/file:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_binary(
    name = "change-beaconstate-ssz",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
