load("@prysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prysmaticlabs/prysm/v4/tools/change-genesis-timestamp",
    visibility = ["//visibility:private"],
    deps = [
        "//encoding/ssz/detect:go_default_library",
        "//io/file:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//runtime/version:go_default_library",
    ],
)

go_binary(
    name = "change-genesis-timestamp",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
