load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "handler.go",
        "server.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/rpc/over/overnode",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/node/close-handler:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
